--- a/login.html
+++ b/login.html
@@ -3,26 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css1.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Login page</title>
   </head>
   <body>
     <h2>Login</h2>
     <div id="image">
-      <img class="logo" src="logo.jpg" alt="logo" />
+      <img class="logo" src="./image/logo.jpg" alt="logo" />
     </div>
 
     <div id="Loginbox">
       <label for="Username"><b>Username</b></label>
-      <input id="user" type="text" placeholder="Enter Username" value="Messi" />
+      <input id="user" type="text" placeholder="Enter Username" />
 
       <label for="password"><b>Password</b></label>
-      <input
-        id="pass"
-        type="password"
-        placeholder="Enter Password"
-        value="messi10"
-      />
+      <input id="pass" type="password" placeholder="Enter Password" />
 
       <button id="login_btn" type="submit">Login</button>
     </div>
